--- a/AngularJS1- Crie webapps poderosas/aplicacao-curso/public/index.html
+++ b/AngularJS1- Crie webapps poderosas/aplicacao-curso/public/index.html
@@ -14,6 +14,7 @@
         <script src="js/lib/angular-route.min.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers/fotos-controller.js"></script>
+        <script src="js/controllers/gruposController.js"></script>
 
         <!-- importando o novo controller -->
         <script src="js/controllers/foto-controller.js"></script>
