--- a/AngularJS1- Crie webapps poderosas/aplicacao-curso/public/index.html
+++ b/AngularJS1- Crie webapps poderosas/aplicacao-curso/public/index.html
@@ -12,6 +12,7 @@
         <script src="js/lib/angular.min.js"></script>
         <script src="js/lib/angular-animate.min.js"></script>
         <script src="js/lib/angular-route.min.js"></script>
+        <script src="js/lib/angular-resource.min.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers/fotos-controller.js"></script>
         <script src="js/controllers/gruposController.js"></script>
@@ -19,6 +20,7 @@
         <!-- importando o novo controller -->
         <script src="js/controllers/foto-controller.js"></script>
         <script src="js/directives/minhas-diretivas.js"></script>
+        <script src="js/services/meus-servicos.js"></script>
     </head>
     <body>
         <div class="container">
