--- a/MEAN Stack- Criando aplicações completas com Javascript/alurapic/public/index.html
+++ b/MEAN Stack- Criando aplicações completas com Javascript/alurapic/public/index.html
@@ -15,8 +15,10 @@
 		<script src="js/controllers/fotos-controller.js"></script>
         <script src="js/controllers/foto-controller.js"></script>
 		<script src="js/controllers/grupos-controller.js"></script>
+		<script src="js/controllers/login-controller.js"></script>
 		<script src="js/directives/minhas-diretivas.js"></script>
         <script src="js/services/meus-servicos.js"></script>
+        <script src="js/services/token-interceptor.js"></script>
 	</head>
 	<body>
 		<div class="container">
